deleted overflow bug

--- a/financiation-react/src/assets/styles/LandingPage.css
+++ b/financiation-react/src/assets/styles/LandingPage.css
@@ -1,7 +1,3 @@
-* {
-    overflow-x: hidden;
-}
-
 .background {
     margin: 0;
     padding: 0;
